--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "ember-resolver": "^8.0.2",
     "ember-source": "~3.26.1",
     "ember-template-lint": "^3.2.0",
+    "ember-toggle": "^7.1.1",
     "ember-welcome-page": "^4.0.0",
     "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
