--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "prettier": "^2.2.1",
     "qunit": "^2.14.1",
     "qunit-dom": "^1.6.0",
-    "sass": "^1.34.1"
+    "sass": "~1.32.12"
   },
   "engines": {
     "node": "10.* || >= 12"
