--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "ember-cli-sass": "^10.0.1",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.1",
+    "ember-concurrency": "^2.1.0",
     "ember-data": "~3.26.0",
     "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^8.0.4",
@@ -52,6 +53,7 @@
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-moment": "^8.0.1",
     "ember-page-title": "^6.2.1",
+    "ember-power-select": "^4.1.6",
     "ember-qunit": "^5.1.4",
     "ember-resolver": "^8.0.2",
     "ember-source": "~3.26.1",
